# tsf4g2

./: INSTALL  Makefile  ModuleList  README  SConsGuide.txt  SConscript  SConstruct  TSF4G技术支持记录.xls  checkrule.sh  configure  configure.in  listfile.sh  version.py
autotest/: autotest.sh  tmplate.html
benchmark/: Makefile  SConscript
benchmark/tdr/: Makefile  README  proformance.xls
benchmark/tsec/: Makefile
dev_rules/: TSF4G-版本管理发布系统说明.doc  TSF4G研发规范.doc  互娱_编码规范.doc  架构平台组新员工指引.doc
docs/: SConscript  TSF4G介绍.ppt  TSF4G组件分离方案.doc  cvs2svn.txt  sync.bat  tsf_footer.htm  tsf_header.htm
docs/dev/: TSF4G-Dev-内部开发环境简介.ppt  TSF4G-Dev-概要设计文档.doc  TSF4G-Dev-维护说明文档.doc  TSF4G-内部开发环境简介.ppt  TSF4G-安装管理工具-概要设计.doc
docs/introduction/: TDir_User_Guide.ppt  TMS-Mart-Introduce.ppt  TSF4G-Bus-介绍.ppt  TSF4G-Dirty-Introduce.ppt  TSF4G-轻松做后台的基石.ppt  TSF4G_TCONND_介绍说明.ppt  TSF4G_TDIR_介绍.ppt  TSF4G_en.ppt  统一版本升级系统.ppt
docs/mmog_design/: mmog_guard_replication.doc  mmog_network_sync.doc
docs/pal/: Doxyfile
docs/scons/: app_scons构建指南.ppt  tsf4g64.ppt  tsf4g_build.ppt  tsf4g_test.ppt  tsf4g_分支开发指南.txt  tsf4g国际化.ppt
docs/tapp/: tdr_Doxyfile
docs/tbus/: Doxyfile
docs/tdirty/: Doxyfile  TSF4G-Dirty-开发指导文档.doc  TSF4G-Dirty-接入指引文档.doc  TSF4G-Dirty-概要设计文档.doc  TSF4G-Dirty-统一敏感词简介.ppt  TSF4G-TDIRTY-API.chm
docs/tdr/: Doxyfile
docs/tmail/: TSF4G-Mail-开发指导文档.doc  TSF4G-Mail-性能测试文档.doc  TSF4G-Mail-概要设计文档.doc  TSF4G-Mail-维护说明文档.doc
docs/tmng/: Doxyfile
docs/tsec/: Doxyfile  TSF-G-SEC-IP验证-概要设计说明书-V100.doc  TSF-G-SECURITY-概要设计说明书-V100.doc  TSF-G-Security-需求规格说明书-V100.doc  struct.vsd
examples/: Makefile  SConscript
examples/comm/: Makefile
examples/tapp/: Makefile
examples/tbus/: Makefile  user_guide_for_demos.doc
examples/tbus_tdr_tsec/: Makefile  SConscript  cfg.py  setup.py
examples/tdr/: Makefile  README
examples/tlog/: Makefile  SConscript  readme.doc  testbase.py
examples/tqqsig/: Makefile  reloaddemo.sh  startdemo.sh  stopdemo.sh  tqqsig_api.ini  tqqsig_demo.c
examples/tqqsig_win32/: ReadMe.txt  tqqsig_api.ini.bak  tqqsig_win32.cpp  tqqsig_win32.dsp  tqqsig_win32.dsw  tqqsig_win32.ncb  tqqsig_win32.opt  tqqsig_win32.plg
include/: SConscript
include/comm/: shtable.h  shtable_shm.h  tini.h  tmodid.h
include/cutest/: CuTest.h
include/obus/: common.h  og_bus.h  og_channel.h  og_comm.h  og_ini.h  og_pkg.h  og_shm.h  og_term.h  oi_cfg.h  oi_cistr.h  oi_log.h  oi_misc.h  oi_net.h  oi_shm.h  oi_str.h  oi_tea.h  ov_dr.h  ov_err.h  ov_os.h  ov_parser.h
include/pal/: README  TODO  ttypes.h
include/sec/: tsec.h  tsec_acrypto.h  tsec_encrypt.h  tsec_hash.h  tsec_i.h  tsec_ip.h  tsec_macros.h
include/tapp/: tapp.h
include/tbus/: tbus.h  tbus_error.h
include/tdr/: tdr_XMLtags.h  tdr_data_io.h  tdr_error.h  tdr_metalib_manage.h  tdr_sql.h  tdr_types.h
include/tmng/: tsm_tdr.h  tsm_uri.h
include/tqqsig/: tini_api.h  tqqsig_api.h
lib/: libexpat.la  libexpat.so.1.5.0  libz.so.1.2.5
lib_src/: Makefile  Makefile.pub  SConscript
lib_src/comm/: Makefile  SConscript  comm_i.h  commbase.c  commbase_i.h  memlog.c  memlog.h  shtable.c  shtable_i.h  shtable_shm.c  swaitque.c  tcommshm.c  tcommshm.h  tcommshm_i.h  tconvert.c  terrimpl.c  tini.c  tlist.c  tlist_i.h  tmempool.c  tmempool_i.h  tmempool_shm.c  tmerr.c  tparser.c  tserr.c  ttimer.c
lib_src/cutest/: CuTest.c  SConscript
lib_src/gtest/: SConscript  gtest.h
lib_src/obus/: Makefile  SConscript  og_bus.c  og_channel.c  og_comm.c  og_ini.c  og_term.c  oi_cistr.c  oi_log.c  oi_misc.c  oi_net.c  oi_shm.c  oi_str.c  ov_dr.c  ov_os.c  ov_parser.c
lib_src/pal/: Makefile  Makefile.pub  SConscript  dirent.c  fcntl.c  pthread.c  pthread_attr.c  pthread_barrier.c  pthread_barrierattr.c  pthread_cond.c  pthread_condattr.c  pthread_mutexattr.c  pthread_rwlock.c  pthread_rwlockattr.c  pthread_spin.c  semaphore.c  shortcut.cpp  strptime.c  strtoll.c  strtoull.c  tdir.c  tdlfcn.c  terrno.c  texec.c  tfile.c  tfork.c  tipc.c  tlock.c  tmmap.c  tmsgque.c  tnet.c  tos.c  tpoll.c  tresource.c  tsched.c  tsem.c  tshm.c  tsignal.c  tsocket.c  tstdio.c  (+6 more)
lib_src/sec/: Makefile  Makefile.real  generate.sh  qslog.cpp  qslog.h  tsec.c  tsec_acrypto.c  tsec_comm.c  tsec_conf.xml  tsec_conf_desc.c  tsec_conf_desc.xml  tsec_encrypted.c  tsec_func.ini  tsec_hash.c  tsec_init.c  tsec_ip.c  tsec_ipacl.xml  tsec_ipacl_desc.c  tsec_ipacl_desc.h  tsec_ipacl_desc.xml
lib_src/taa/: ChangeLog  Makefile  SConscript  tagentapi.c
lib_src/tapp/: Makefile  Makefile.real  SConscript  conv.bat  conv.py  generate.sh  tapp.c  tapp_basedata_def.xml  tapp_controller.c  tapp_controller.h  tapp_i.h  tapp_proc_ctrlpkg.c  tapp_rundata_timer_def.xml  tapp_service.c  tapp_service.h  tapp_service_win32.c  tapp_service_win32.h  tapp_service_win32_i.c  tapp_service_win32_i.h  tapp_thread.c  tappctrl_kernel_i.c  tappctrl_kernel_i.h  tappctrl_proto.xml
lib_src/tbus/: Makefile  Makefile.pub  Makefile.real  Makefile_r.real  SConscript  TBUS_CHANGES.txt  generate.sh  tbus.c  tbus_addr_templet.c  tbus_addr_templet.h  tbus_channel.c  tbus_channel.h  tbus_config_mng.c  tbus_config_mng.h  tbus_dyemsg.c  tbus_dyemsg.h  tbus_error.c  tbus_head.xml  tbus_kernel.h  tbus_log.c  tbus_log.h  tbus_misc.c  tbus_misc.h  tbus_mmap_for_win32.c  tbus_mmap_for_win32.h  tbus_route.c  tbus_route.h  tbus_timestamp_and_heartbeat.c
lib_src/tbus_i/: SConscript  tbus_comm.xml  tbus_conf_mgr.c  tbus_conf_mgr.h  tbus_desc.xml  tbus_desc_ex.xml  tbus_desc_mgr.c  tbus_desc_mgr.h  tbus_macros.xml  tbusd_desc.xml
lib_src/tdr/: Makefile  Makefile.pub  Makefile.st  SConscript  SConscript_dbms  SConscript_dbms_xml  SConscript_xml  changeslist  postBuild.py  readme.txt  tdr_auxtools.c  tdr_auxtools.h  tdr_ctypes_info.c  tdr_ctypes_info_i.h  tdr_data_io.c  tdr_data_sort.c  (+21 more)
services_src/: Makefile
test_lib/: SConscript
test_services/: SConscript
tools/: SConscript  readme.doc  tbus_multi_desc.xml  tbus_single_desc.xml  tbusconf.sh  tbusmgr.xml  tbusmgr.xml.cus  tbusmgr.xml.dir  trelaymgr.xml
tools_src/: Makefile  SConscript
unittests_src/: Makefile
win32/: SConstruct
(+1369 files in other folders)
